--- a/FourthTask/FourthTask.Mvc/Views/Home/Customer.cshtml
+++ b/FourthTask/FourthTask.Mvc/Views/Home/Customer.cshtml
@@ -56,8 +56,8 @@
                     <td>{{ order.ShipRegion }}</td>
                     <td>{{ order.ShipPostalCode }}</td>
                     <td>{{ order.ProductsCount }}</td>
-                    <td>${{ order.Freight }}</td>
-                    <td>${{ order.Total }}</td>
+                    <td>{{ order.Freight | price }}</td>
+                    <td>{{ order.Total | price }}</td>
                     <td>
                         <div class="text-warning" v-bind:class="{ 'hidden': !order.ContainsDiscontinuedProduct }">This order contains discontinued products!</div>
                         <div class="text-danger" v-bind:class="{ 'hidden': !order.UnitsInStockAreLessThanOrdered }">Not enough units in stock!</div>
