--- a/FourthTask/FourthTask.Mvc/Views/Home/Index.cshtml
+++ b/FourthTask/FourthTask.Mvc/Views/Home/Index.cshtml
@@ -10,21 +10,23 @@
     </div>
     <div class="row" style="margin-top: 20px">
         <div class="col-md-6">
-            <table class="table table-hover table-striped table-responsive table-bordered">
-                <thead>
-                    <tr>
-                        <th>Name</th>
-                        <th>Orders</th>
-                    </tr>
-                </thead>
-                <tfoot></tfoot>
-                <tbody >
-                    <tr v-for="customer in customers" v-on:click="customerSelected(customer.CustomerId)" style="cursor: pointer;">
-                        <td>{{ customer.ContactName }}</td>
-                        <td>{{ customer.OrdersCount }}</td>
-                    </tr>
-                </tbody>
-            </table>
+            <div class="table-responsive">
+                <table class="table table-hover table-striped table-bordered">
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Orders</th>
+                        </tr>
+                    </thead>
+                    <tfoot></tfoot>
+                    <tbody>
+                        <tr v-for="customer in customers" v-on:click="customerSelected(customer.CustomerId)" style="cursor: pointer;">
+                            <td>{{ customer.ContactName }}</td>
+                            <td>{{ customer.OrdersCount }}</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 </div>
