--- a/FourthTask/FourthTask.Mvc/Views/Home/CustomerDetails.cshtml
+++ b/FourthTask/FourthTask.Mvc/Views/Home/CustomerDetails.cshtml
@@ -7,15 +7,17 @@
 <div id="app" class="row">
     <input id="customerId" type="hidden" value="@Model" />
     <div class="row">
-        <div class="col-sm-8">
+        <div class="col-sm-8" style="padding-left: 0">
             <div class="panel panel-default">
-                <div class="panel-heading">Customer Information</div>
+                <div class=" panel-heading">Customer Information</div>
                 <div class="panel-body">
                     <div class="col-sm-4 col-xs-4 col-md-4">
                         <div class="row">
-                            <img src="~/Content/Images/user-icon.png" class="col-md-10 col-sm-10 col-xs-10 img-responsive" />
+                            <img src="~/Content/Images/user-icon.png" class="col-md-10 col-sm-10 col-xs-10 thumbnail img-responsive center-block" />
                         </div>
-                        <h4 class="text-primary">{{customer.ContactName}}</h4>
+                        <div class="row">
+                            <h4 class="text-primary text-left">{{customer.ContactName}}</h4>
+                        </div>
                     </div>
                     <div class="col-sm-6 col-xs-6">
                         <div class="row">
