--- a/FourthTask/FourthTask.Mvc/Views/Shared/_Layout.cshtml
+++ b/FourthTask/FourthTask.Mvc/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
     <div class="container body-content">
         @RenderBody()
     </div>
+    <script src="~/Scripts/vendor/jquery/jquery-3.3.1.min.js"></script>
     @Scripts.Render("~/bundles/vue")
     @RenderSection("scripts", required: false)
 </body>
